--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,3 +56,16 @@ a {
   top: 4px;
   margin-right: 10px;
 }
+
+.layui-form {
+  padding: 0 30px;
+}
+
+.links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.links a {
+  font-size: 12px;
+}
